WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59086
[GTK] missing LayoutTestController::callShouldCloseOnWebView()
https://bugs.webkit.org/show_bug.cgi?id=59086
Summary
[GTK] missing LayoutTestController::callShouldCloseOnWebView()
Philippe Normand
Reported
2011-04-21 03:04:59 PDT
Needed for fast/events/onbeforeunload-focused-iframe.html
Attachments
proposed patch
(5.38 KB, patch)
2011-04-21 03:07 PDT
,
Philippe Normand
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Philippe Normand
Comment 1
2011-04-21 03:07:45 PDT
Created
attachment 90506
[details]
proposed patch
Philippe Normand
Comment 2
2011-04-21 09:32:46 PDT
Committed
r84508
: <
http://trac.webkit.org/changeset/84508
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug