2011-04-21  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GTK] missing LayoutTestController::callShouldCloseOnWebView()
        https://bugs.webkit.org/show_bug.cgi?id=59086

        * platform/gtk/Skipped: Unskip fast/events/onbeforeunload-focused-iframe.html

        callShouldCloseOnWebView() implementation.

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::callShouldCloseOnWebView):

        DRT::shouldClose(), used by the LayoutController.

        * WebCoreSupport/DumpRenderTreeSupportGtk.cpp:
        (DumpRenderTreeSupportGtk::shouldClose):
        * WebCoreSupport/DumpRenderTreeSupportGtk.h:

Canonical link: https://commits.webkit.org/74247@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84508 268f45cc-cd09-0410-ab3c-d52691b4dbfc