Tools/DumpRenderTree/gtk/LayoutTestControllerGtk.cpp
@@ -874,8 +874,7 @@ void LayoutTestController::removeAllVisitedLinks()
 
 bool LayoutTestController::callShouldCloseOnWebView()
 {
-    // FIXME: Implement for testing fix for https://bugs.webkit.org/show_bug.cgi?id=27481
-    return false;
+    return DumpRenderTreeSupportGtk::shouldClose(mainFrame);
 }
 
 void LayoutTestController::apiTestNewWindowDataLoadBaseURL(JSStringRef utf8Data, JSStringRef baseURL)
